[tool.poetry]
name = "rmlb"
version = "0.1.0"
description = "Remove a branch that does not exist in remote."
authors = ["ucpr <hoge.uchihara@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
rmlb = "rmlb:main"
